syntax = "proto3";

option go_package = "/api";

service Previewer {
  rpc GetPreview(PreviewUrl) returns (PreviewImage) {}
}

message PreviewUrl {
  string videoUrl = 1;
}


message PreviewImage {
  bytes image = 1;
}